<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clase09</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registro">RegistroActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- Textos para los controles -->
    <string name="texto_usuario">Usuario: </string>
    <string name="texto_clave">Clave: </string>
    <string name="texto_boton">Ingresar</string>
    <string name="texto_registro">Registrarse</string>
    <string name="texto_nombre">Nombre: </string>
    <string name="texto_boton_graba">Registrarse</string>
    
    <!-- Textos para las propiedades hint de los controles -->
    <string name="texto_usuario_hint">Ingrese su usuario</string>
    <string name="texto_clave_hint">Ingrese su clave</string>
    <string name="texto_nombre_hint">Ingrese su nombre</string>
    
    <!-- Textos para mensajes de error -->
    <string name="error_logueo">Los datos ingresados son inválidos!!</string>
    <string name="error_usuario">Hubo un problema, revisa los datos ingresados.</string>
    <string name="error_usuario_registro">Hubo un problema, revisa los datos ingresados.</string>
    <string name="error_usuario_existente">Ya existe ese usuario, intente con otro usuario.</string>
    <string name="registro_usuario">Usuario ingresado correctamente.</string>
    <string name="registro_usuario_error">Hubo un problema, inténtelo nuevamente.</string>
        
    
    
    

</resources>